--- a/android-gui/Dexter/src/main/res/layout/activity_main.xml
+++ b/android-gui/Dexter/src/main/res/layout/activity_main.xml
@@ -8,9 +8,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
+    <ListView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/listPackages"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"/>
 </RelativeLayout>
