--- a/android-gui/Dexter/src/main/res/layout/listitem_packages.xml
+++ b/android-gui/Dexter/src/main/res/layout/listitem_packages.xml
@@ -4,29 +4,39 @@
               android:orientation="horizontal"
               android:layout_width="fill_parent"
               android:layout_height="?android:attr/listPreferredItemHeight"
+              android:gravity="center_vertical"
               android:focusableInTouchMode="false">
 
     <ImageView
             android:adjustViewBounds="true"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:id="@+id/imgPackageIcon"/>
+            android:layout_width="60dip"
+            android:layout_height="60dip"
+            android:src="@drawable/ic_launcher"
+            android:id="@+id/imgPackageIcon"
+            android:paddingRight="3pt" />
 
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:paddingLeft="3pt"
-            android:paddingTop="2pt"
-            android:paddingBottom="2pt">
+            android:layout_height="wrap_content">
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@android:style/TextAppearance.Medium"
+                android:text="com.example.packagename"
+                android:id="@+id/textPackageName"
+                android:layout_gravity="left|center_vertical"
+                android:singleLine="true"/>
 
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@android:style/TextAppearance.Small"
-                android:text="com.example.packagename"
-                android:id="@+id/textPackageName"
-                android:layout_gravity="left|center_vertical"/>
+                android:text="/data/app/com.example.packagename-1.apk"
+                android:id="@+id/textApkPath"
+                android:layout_gravity="left|center_vertical"
+                android:singleLine="true"/>
     </LinearLayout>
 
 </LinearLayout>
