--- a/android-gui/Dexter/src/main/res/layout/activity_main.xml
+++ b/android-gui/Dexter/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,7 +6,17 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical">
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Available packages:"
+            android:id="@+id/labelAvailablePackages"
+            android:layout_alignParentTop="true"
+            android:layout_alignLeft="@+id/listPackages"/>
 
     <ListView
             android:layout_width="fill_parent"
@@ -14,4 +24,5 @@
             android:id="@+id/listPackages"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"/>
-</RelativeLayout>
+
+</LinearLayout>
