--- a/gui-android/Dexter/src/main/res/layout/activity_instrument.xml
+++ b/gui-android/Dexter/src/main/res/layout/activity_instrument.xml
@@ -5,22 +5,23 @@
               tools:context=".InstrumentActivity"
               android:orientation="vertical">
 
-    <LinearLayout
+    <TextView
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Securing..."
+            android:layout_gravity="center_horizontal|top"
+            android:background="@color/title_bg"
+            android:textColor="@color/title_fg"
+            android:paddingLeft="12dip"
+            android:paddingTop="12dip"
+            android:paddingRight="12dip"
+            android:paddingBottom="12dip"
+            />
 
-        <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Securing..."
-                android:layout_gravity="center_horizontal|top"
-                android:background="@color/title_bg"
-                android:textColor="@color/title_fg"
-                android:paddingLeft="12dip"
-                android:paddingTop="12dip"
-                android:paddingRight="12dip"
-                android:paddingBottom="12dip"
-                />
-    </LinearLayout>
+    <EditText
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/terminal"
+            android:inputType="textMultiLine"/>
 </LinearLayout>
